--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
       </li>
 
 
@@ -71,8 +71,7 @@
 <div class="container" >
 
 	<form method="POST" action="{{ url_for('extract')}}">
-		<textarea rows="5" cols="5" required="true" name="rawtext" class="form-control">
-		</textarea>
+		<textarea rows="5" cols="5" required="true" name="rawtext" class="form-control"></textarea>
 		<button type="reset" class="btn btn-primary"><i class="fa fa-eraser"></i> Clear</button>
         <button type="submit" class="btn btn-info"><i class="fa fa-database"></i> Submit</button>
 	</form>
