--- a/templates/result.html
+++ b/templates/result.html
@@ -14,17 +14,81 @@
 	margin-top: 100px;
 	background-color: #fff;
 	box-shadow: 0px 0px 20px #c1c1c1;
-}
-#custom_card{
+  }
+  #custom_card{
 	background-color:grey;
 	color:#fff;
 	padding:10px;
-}
-#custom_card2{
-	background-color:#383838;
-	color:#fff;
-	padding:10px;
-}
+  }
+  #custom_card2{
+    background-color:#383838;
+    color:#fff;
+    padding:10px;
+  }
+  .container {
+    padding-bottom: 5px;
+  }
+
+  /* here for tabs css */
+  .tabs {
+    margin-top: 30px;
+    width: 100%;
+    justify-content: space-between;
+    font-size: 16px;
+    align-items: center;
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-bottom: 15px;
+    display: flex;
+  }
+  [data-tab-info] {
+    display: none;
+  }
+
+  .active[data-tab-info] {
+    display: block;
+  }
+  .active[data-tab-info] {
+    display: block;
+  }
+  a:-webkit-any-link {
+    color: black;
+    text-decoration: none;
+  }
+  .username {
+    width: 100%;
+  }
+  .tab {
+    overflow: hidden;
+    background-color: transparent;
+  }
+  .tabtitle .active {
+    color: red;
+  }
+
+  .highlight{
+    background-color: #673AB7;
+    color: white;
+    border-radius: 5px 10px;
+    padding: 5px 10px;
+    font-size: larger;
+    font-weight: 300;
+  }
+
+  button{
+    border-radius: 5px 10px;
+    padding: 5px 10px;
+    font-size: larger;
+    font-weight: 300;
+    border: none;
+  }
+
+  .main_container {
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    justify-content: space-between;
+    margin: 10px auto 10px auto;
+    width: 100%;
+  }
 </style>
   
     <!-- Font Awesome -->
@@ -48,10 +112,8 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="/logout">Logout</a>
       </li>
-
-
     </ul>
 
   </div>
@@ -74,28 +136,51 @@
 =============================
 {% endfilter %}
 <hr/>
-
-
-<div class="container">
-	<div class="row">
-		<div class="col-md-6">
-          <div class="card mb-10 shadow-sm" id="custom_card">
-          	<h4>Original Data</h4>
-          	<p>{{ rawtext }}</p>
-			
-		</div>
-	</div>
-	<div class="col-md-6">
-          <div class="card mb-10 shadow-sm" id="custom_card2">
-          	<h4>Result of Data</h4>
-			<p>{{ result|markdown }}</p>
-			
-		</div>
-	</div>
-</div>
-	
-
-</div>
+  <div class="main_container">
+    <div class="tabs">
+      <form action="{{url_for('extract', lang='en')}}" method="get">
+        <input type="hidden" name="lang" value="en">
+        <button type="submit" class="tabtitle highlight" data-tab-value="en">English</button>
+      </form>
+      <form action="{{url_for('extract', lang='fr')}}" method="get">
+        <input type="hidden" name="lang" value="fr">
+        <button type="submit" data-tab-value="fr">French</button>
+      </form>
+      <form action="{{url_for('extract', lang='ja')}}" method="get">
+        <input type="hidden" name="lang" value="ja">
+        <button type="submit" data-tab-value="ja">Japanese</button>
+      </form>
+      <form action="{{url_for('extract', lang='nl')}}" method="get">
+        <input type="hidden" name="lang" value="nl">
+        <button type="submit" data-tab-value="nl">Dutch</button>
+      </form>
+      <form action="{{url_for('extract', lang='es')}}" method="get">
+        <input type="hidden" name="lang" value="es">
+        <button type="submit" data-tab-value="es">Spanish</button>
+      </form>
+    </div>
+    <div>
+      {% for rawtext, formated_text in english_sent.items() %}
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card mb-10 shadow-sm" id="custom_card">
+                <h4>Original Data</h4>
+                <p>{{rawtext}}</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card mb-10 shadow-sm" id="custom_card2">
+                <h4>Result of Data</h4>
+                <p>{{ formated_text|markdown }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+    
+  </div>
 
 
 <!-- JQuery -->
@@ -109,7 +194,42 @@
 
 <script src="{{ url_for('static', filename='js/main.js')}}"></script>
 <script type="text/javascript">
-	$('.file_upload').file_upload();
+	// $('.file_upload').file_upload();
+
+  const tabs = document.querySelectorAll("[data-tab-value]");
+  const tabInfos = document.querySelectorAll("[data-tab-info]");
+
+
+  let params = (new URL(document.location)).searchParams;
+  let lang = params.get("lang");
+
+  tabs.forEach((t) => {
+    t.classList.remove("highlight");
+  });
+
+  tabInfos.forEach((tabInfo) => {
+    tabInfo.classList.remove("active");
+  })
+
+  if (lang=="en") {
+    document.querySelector('[data-tab-value="en"]').classList.add("highlight")
+  }
+  else if (lang=="fr") {
+    document.querySelector('[data-tab-value="fr"]').classList.add("highlight")
+  }
+  else if (lang=="ja") {
+    document.querySelector('[data-tab-value="ja"]').classList.add("highlight")
+  }
+  else if (lang=="nl") {
+    document.querySelector('[data-tab-value="nl"]').classList.add("highlight")
+  }
+  else if (lang=="es") {
+    document.querySelector('[data-tab-value="es"]').classList.add("highlight")
+  }
+  else {
+    document.querySelector('[data-tab-value="en"]').classList.add("highlight")
+  }
+
 </script>
 </body>
 </html>
